opam-version: "1.2"
name:         "mirage-bootvar-solo5"
maintainer:   "Martin Lucina <martin@lucina.net>"
homepage:     "https://github.com/mirage/mirage-bootvar-solo5"
bug-reports:  "https://github.com/mirage/mirage-bootvar-solo5/issues/"
dev-repo:     "https://github.com/mirage/mirage-bootvar-solo5.git"
license:      "ISC"
authors: [
  "Dan Williams <djwillia@us.ibm.com>"
  "Magnus Skjegstad <magnus@skjegstad.com>"
  "Martin Lucina <martin@lucina.net>"
]
tags: [
  "org:mirage"
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name] {with-test}
]
depends: [
  "dune" {build & >= "1.0"}
  "mirage-solo5" {>= "0.3.0"}
  "lwt"
  "parse-argv"
]
available: [ ocaml-version >= "4.04.2" ]
