opam-version: "2.0"
name: "parse-argv"
maintainer: "MirageOS Core team"
authors: [
  "Anil Madhavapeddy"
  "Dan Williams"
  "Hannes Mehnert"
  "Jon Ludlam"
  "Magnus Skjegstad"
  "Martin Lucina"
  "Mindy Preston"
  "Thomas Gazagnaire"
]
tags: "org:mirage"
homepage: "https://github.com/mirage/mirage-bootvar"
doc: "https://mirage.github.io/mirage-bootvar/"
bug-reports: "https://github.com/mirage/mirage-bootvar/issues"
license: "ISC"
depends: [
  "ocaml" {>= "4.08.0"}
  "dune" {>= "2.6"}
  "ounit2" {with-test}
]
depopts: [
  "mirage-xen"
  "mirage-solo5"
]
conflicts: [
  "mirage-xen" {< "6.0.0"}
  "mirage-solo5" {< "0.6.0"}
]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
dev-repo: "git+https://github.com/mirage/mirage-bootvar.git"
synopsis: "Boot time arguments for MirageOS"
description: """
Mirage-bootvar reads and parses boot parameters for MirageOS unikernels.
"""
