opam-version: "2.0"
name: "parse-argv"
maintainer: "Mindy Preston <mindy.preston@docker.com>"
authors: ["Jon Ludlam" "Magnus Skjegstad" "Mindy Preston"]
tags: "org:mirage"
homepage: "https://github.com/mirage/parse-argv"
doc: "https://docs.mirage.io"
bug-reports: "https://github.com/mirage/parse-argv/issues"
depends: [
  "ocaml" {>= "4.04.2"}
  "jbuilder" {build & >= "1.0+beta10"}
  "ounit" {with-test}
  "astring"
]
build: [
  ["jbuilder" "subst"] {pinned}
  ["jbuilder" "build" "-p" name "-j" jobs]
  ["jbuilder" "runtest"] {with-test}
]
dev-repo: "git+https://github.com/mirage/parse-argv.git"
