opam-version: "2.0"
name: "parse-argv"
maintainer: "Mindy Preston <mindy.preston@docker.com>"
authors: ["Jon Ludlam" "Magnus Skjegstad" "Mindy Preston"]
tags: "org:mirage"
homepage: "https://github.com/mirage/parse-argv"
doc: "https://mirage.github.io/parse-argv/"
bug-reports: "https://github.com/mirage/parse-argv/issues"
depends: [
  "ocaml" {>= "4.06.0"}
  "dune" {>= "1.0"}
  "ounit" {with-test}
]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
dev-repo: "git+https://github.com/mirage/parse-argv.git"
synopsis: "Process strings into sets of command-line arguments"
description: """
parse-argv is a small implementation of a simple argv parser.
"""
