(library
 (name mirage_bootvar)
 (public_name mirage-bootvar)
 (modules mirage_bootvar)
 (libraries mirage-bootvar.parse-argv mirage-bootvar.backend))

(library
 (name mirage_bootvar_backend)
 (modules mirage_bootvar_backend)
 (public_name mirage-bootvar.backend)
 (default_implementation mirage-bootvar.unix)
 (virtual_modules mirage_bootvar_backend))
